Historias de usuario
Cargar preguntas a la vista xml

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -165,6 +165,12 @@
 
     <!-- -->
 
+
+    <!--texto interfaz Cargar prueba  -->
+    <string name="BuscarCargarP">  Search </string>
+    <!-- -->
+
+
     <!--texto interfaz -->
     <!-- -->
 
