--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -164,6 +164,11 @@
 
     <!-- -->
 
+    <!--texto interfaz Cargar prueba  -->
+    <string name="BuscarCargarP">  Buscar </string>
+
+    <!-- -->
+
     <!--texto interfaz -->
     <!-- -->
 
